# assets/swagger.json
@@ -5866,8 +5866,12 @@
           }
         },
         "sourceType": {
+          "type": "string",
+          "title": "SourceType specifies the type of this application"
+        },
+        "sourceTypes": {
           "type": "array",
-          "title": "SourceType specifies the type of this application",
+          "title": "SourceTypes specifies the type of the sources included in the application",
           "items": {
             "type": "string"
           }
@@ -7482,6 +7486,13 @@
           "type": "string",
           "title": "Revision holds the revision the sync was performed against"
         },
+        "revisions": {
+          "type": "array",
+          "title": "Revisions holds the revision of each source in sources field the sync was performed against",
+          "items": {
+            "type": "string"
+          }
+        },
         "source": {
           "$ref": "#/definitions/v1alpha1ApplicationSource"
         },
@@ -7790,6 +7801,13 @@
         "revision": {
           "description": "Revision is the revision (Git) or chart version (Helm) which to sync the application to\nIf omitted, will use the revision specified in app spec.",
           "type": "string"
+        },
+        "revisions": {
+          "description": "Revisions is the list of revision (Git) or chart version (Helm) which to sync each source in sources field for the application to\nIf omitted, will use the revision specified in app spec.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         },
         "source": {
           "$ref": "#/definitions/v1alpha1ApplicationSource"
